--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
        <div class="links">
          <a href="#home">home</a>
          <a href="#about">sobre nós</a>
+         <a href="#objective">Objetivos</a>
          <a href="#review">review</a>
          <a href="#contact">contato</a>
        </div>
