--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                   <div class="content">
                     <h3>O que faz nossa empresa especial?</h3>
                     <p>A Agro Lima é uma empresa de agronegócio dedicada a promover a sustentabilidade e a inovação no campo. Atuamos em várias etapas da cadeia produtiva, desde  a
-                        comercialização de produtos até consultas agrícolas, sempre com um compromisso profundo com a qualidade e a responsabilidade ambiental.   garantimos eficiência, rastreabilidade e segurança em cada fase de nossa produção. Acreditamos que o crescimento sustentável é o caminho para o futuro do agronegócio e trabalhamos incansavelmente para oferecer produtos que atendam às expectativas dos nossos clientes </p>
+                        comercialização de produtos até consultas agrícolas, sempre com um compromisso profundo com a qualidade e a responsabilidade ambiental.   Garantimos eficiência, rastreabilidade e segurança em cada fase de nossa produção. Acreditamos que o crescimento sustentável é o caminho para o futuro do agronegócio e trabalhamos incansavelmente para oferecer produtos que atendam às expectativas dos nossos clientes </p>
                   </div>
                   
               </div>
